# hello-jniCallback_jk

./: local.properties
app/src/main/cpp/: CMakeLists.txt  Info.cpp  Info.h  LogHelper.cpp  hello-jnicallback.c
app/src/main/java/com/example/hellojnicallback/: MainActivity.java
